--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,11 @@ header p {
   align-items: center;
 }
 
+.red {
+  color: red;
+  font-weight: bold;
+}
+
 #player input {
   font: inherit;
   border: 1px solid #54a399;
@@ -212,15 +217,25 @@ header p {
 .result-modal button:hover {
   background: #051715;
 }
+.spinner {
+  display: inline-block;
+}
 
-@keyframes slide-in-from-top {
-  0% {
-    transform: translateY(-15%);
-    opacity: 0;
+.spin-once {
+  animation: spinOnce 0.5s ease-in-out forwards;
+}
+
+.idle {
+  animation: none;
+  opacity: 0.6;
+}
+
+@keyframes spinOnce {
+  from {
+    transform: rotate(0deg);
   }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
+  to {
+    transform: rotate(180deg);
   }
 }
 
