--- a/src/index.css
+++ b/src/index.css
@@ -120,10 +120,41 @@ header p {
   justify-content: center;
   padding: 2rem;
   margin: 2rem auto;
-  background: linear-gradient(#4df8df, #4df0f8);
   color: #221c18;
   box-shadow: 0 2px 8px rgba(35, 34, 34, 0.6);
   border-radius: 6px;
+}
+
+.challenge:nth-child(1) {
+  background-color: #00eeff;
+}
+
+.challenge:nth-child(2) {
+  background-color: #00cfdd;
+}
+
+.challenge:nth-child(3) {
+  background-color: #00a5b1;
+}
+
+.challenge:nth-child(4) {
+  background-color: #006b72;
+}
+
+.result-modal.lOne {
+  background-color: black;
+}
+
+.result-modal.lTwo {
+  background-color: blue;
+}
+
+.result-modal.lThree {
+  background-color: green;
+}
+
+.result-modal.lFour {
+  background-color: pink;
 }
 
 .challenge button {
@@ -217,6 +248,11 @@ header p {
 .result-modal button:hover {
   background: #051715;
 }
+
+/* .result-modal:nth-child(1){
+
+} */
+
 .spinner {
   display: inline-block;
 }
@@ -248,5 +284,16 @@ header p {
   }
   100% {
     opacity: 0.5;
+  }
+}
+
+@keyframes slide-in-from-top {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
